--- a/Sources/src/emsa/pattern/creational/builder/.gitignore
+++ b/Sources/src/emsa/pattern/creational/builder/.gitignore
@@ -1,3 +1,5 @@
 /Computer$ComputerBuilder.class
 /Computer.class
 /TestBuilderPattern.class
+/BankAccount.class
+/BankAccount$BankAccountBuilder.class
